Made javascript to convert json to html

--- a/temple/index.html
+++ b/temple/index.html
@@ -2,8 +2,7 @@
 <html lang="en">
     <!-- TO DO
         Tonight:
-        1. Temples page json -> javascript -> html
-            1.5 Temples like button w/ localstorage
+        1. Temples like button w/ localstorage
         2. Emergency Alert javascript
 
         Tomorrow:
