--- a/temple/services/missionary/thankyou/index.html
+++ b/temple/services/missionary/thankyou/index.html
@@ -17,7 +17,6 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <body>
         <header>
@@ -32,7 +31,7 @@
                     <li><a href="../../../temples/">Temples</a></li>
                     <li><a href="../../../reservations/">Reservations</a></li>
                     <div class="dropdown">
-                        <li class="dropbtn"><a href="../../">Services <i class="fa fa-caret-down"></i></a></li>
+                        <li class="dropbtn"><a href="../../">Services ▼</a></li>
                         <div class="dropdown-content">
                             <a href="../../reception/">Reception</a></li>
                             <a href="../">Temple Missionary</a></li>
