--- a/temple/reservations/index.html
+++ b/temple/reservations/index.html
@@ -18,7 +18,6 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <body>
         <header>
@@ -33,7 +32,7 @@
                     <li class="link"><a href="../temples/">Temples</a></li>
                     <li class="link"><a class="active">Reservations</a></li>
                     <li class="dropdown">
-                        <a href="../services/" class="forcelink dropbtn">Services <i class="fa fa-caret-down"></i></a>
+                        <a href="../services/" class="forcelink dropbtn">Services ▼</a>
                         <div class="dropdown-content">
                             <a href="../services/reception/">Reception</a>
                             <a href="../services/missionary/">Temple Missionary</a>
