--- a/temple/services/index.html
+++ b/temple/services/index.html
@@ -17,7 +17,6 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <body>
         <header>
@@ -32,7 +31,7 @@
                     <li class="link"><a href="../temples/">Temples</a></li>
                     <li class="link"><a href="../reservations/">Reservations</a></li>
                     <li class="dropdown">
-                        <a class="active forcelink dropbtn">Services <i class="fa fa-caret-down"></i></a>
+                        <a class="active forcelink dropbtn">Services ▼</a>
                         <div class="dropdown-content">
                             <a href="reception/">Reception</a>
                             <a href="missionary/">Temple Missionary</a>
