--- a/temple/reservations/thankyou/index.html
+++ b/temple/reservations/thankyou/index.html
@@ -14,9 +14,9 @@
         <link rel="stylesheet" href="css/medium.css">
         <link rel="stylesheet" href="css/large.css">
         <script src="../../js/base.js" defer></script>
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com" defer>
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin defer>
+        <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap" rel="stylesheet" defer>
     </head>
     <body>
         <header>
