--- a/temple/temples/index.html
+++ b/temple/temples/index.html
@@ -15,9 +15,9 @@
         <link rel="stylesheet" href="css/large.css">
         <script src="../js/base.js" defer></script>
         <script src="js/temples.js" defer></script>
-        <link rel="preconnect" href="https://fonts.googleapis.com" defer>
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin defer>
-        <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap" rel="stylesheet" defer>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap" rel="stylesheet">
     </head>
     <body>
         <header>
@@ -46,7 +46,7 @@
             <span id="close">X</span>
         </div>
         <main>
-            
+            <h2>Temples We Service</h2>
         </main>
         <footer>
             <img src="../images/icon.webp" alt="Icon" class="icon">
