--- a/temple/services/reception/index.html
+++ b/temple/services/reception/index.html
@@ -14,9 +14,6 @@
         <link rel="stylesheet" href="css/medium.css">
         <link rel="stylesheet" href="css/large.css">
         <script src="../../js/base.js" defer></script>
-        <link rel="preconnect" href="https://fonts.googleapis.com" defer>
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin defer>
-        <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap" rel="stylesheet" defer>
     </head>
     <body>
         <header>
@@ -76,5 +73,8 @@
                 <p id="lastUpdated"></p>
             </div>
         </footer>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap" rel="stylesheet">
     </body>
 </html>
