--- a/temple/temples/index.html
+++ b/temple/temples/index.html
@@ -15,9 +15,6 @@
         <link rel="stylesheet" href="css/large.css">
         <script src="../js/base.js" defer></script>
         <script src="js/temples.js" defer></script>
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap" rel="stylesheet">
     </head>
     <body>
         <header>
@@ -32,7 +29,7 @@
                     <li class="link"><a class="active">Temples</a></li>
                     <li class="link"><a href="../reservations/">Reservations</a></li>
                     <li class="dropdown">
-                        <a href="../services/" class="forcelink dropbtn">Services ▼</i></a>
+                        <a href="../services/" class="forcelink dropbtn">Services ▼</a>
                         <div class="dropdown-content">
                             <a href="../services/reception/">Reception</a>
                             <a href="../services/missionary/">Temple Missionary</a>
@@ -70,5 +67,8 @@
                 <p id="lastUpdated"></p>
             </div>
         </footer>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap" rel="stylesheet">
     </body>
 </html>
