--- a/temple/temples/index.html
+++ b/temple/temples/index.html
@@ -44,6 +44,9 @@
         </div>
         <main>
             <h2>Temples We Service</h2>
+            <article>
+                
+            </article>
         </main>
         <footer>
             <img src="../images/icon.webp" alt="Icon" class="icon">
