Modified how the form in to make a reservation works.

--- a/temple/index.html
+++ b/temple/index.html
@@ -28,18 +28,18 @@
     </head>
     <!--
         Home Page:
-            Lighthouse: 
-            Insights: 
-            HTML Validation: 
-            CSS Validation: 
-            Accessibility: 
+            Lighthouse: ✓
+            Insights: ✓
+            HTML Validation: ✓
+            CSS Validation: ✓
+            Accessibility: ✓
             Links: ✓
         
         Temples Page:
-            Lighthouse: 
-            Insights: 
-            HTML Validation: 
-            CSS Validation: 
+            Lighthouse: ✓
+            Insights: ✓
+            HTML Validation: ✓
+            CSS Validation: ✓
             Accessibility: 
             Links: ✓
             
