--- a/temple/reservations/index.html
+++ b/temple/reservations/index.html
@@ -79,7 +79,7 @@
 
                 <fieldset id="comments">
                     <legend>Special accommodations/comments</legend>
-                    <label><textarea name="comments"></textarea></label>
+                    <textarea name="comments"></textarea>
                 </fieldset>
 
                 <div id="buttonwrap">
