Modified more stuff for performance

--- a/temple/reservations/index.html
+++ b/temple/reservations/index.html
@@ -79,7 +79,9 @@
 
                 <fieldset id="comments">
                     <legend>Special accommodations/comments</legend>
-                    <textarea name="comments"></textarea>
+                    <label>Write any extra information or things for us here.<br>
+                        <textarea name="comments"></textarea>
+                    </label>
                 </fieldset>
 
                 <div id="buttonwrap">
