Added another test

--- a/temple/index.html
+++ b/temple/index.html
@@ -30,6 +30,7 @@
         Home Page:
             Lighthouse: ✓
             Insights: ✓
+            500kb Weight: ✓
             HTML Validation: ✓
             CSS Validation: ✓
             Accessibility: ✓
@@ -38,6 +39,7 @@
         Temples Page:
             Lighthouse: ✓
             Insights: ✓
+            500kb Weight: ✓
             HTML Validation: ✓
             CSS Validation: ✓
             Accessibility: ✓
@@ -46,14 +48,16 @@
         Reservations Page:
             Lighthouse: ✓
             Insights: ✓
+            500kb Weight: ✓
             HTML Validation: ✓
             CSS Validation: ✓
-            Accessibility: X
+            Accessibility: ✓
             Links: ✓
             
         Services Page:
             Lighthouse: ✓
             Insights: ✓
+            500kb Weight: ✓
             HTML Validation: ✓
             CSS Validation: ✓
             Accessibility: ✓
@@ -62,6 +66,7 @@
         Missionary Page:
             Lighthouse: X
             Insights: X
+            500kb Weight: ✓
             HTML Validation: ✓
             CSS Validation: ✓
             Accessibility: ✓
@@ -70,6 +75,7 @@
         Reception Page:
             Lighthouse: ✓
             Insights: ✓
+            500kb Weight: ✓
             HTML Validation: ✓
             CSS Validation: ✓
             Accessibility: ✓
