--- a/temple/index.html
+++ b/temple/index.html
@@ -3,7 +3,6 @@
     <!-- TO DO
         Tonight:
         1. Temples like button w/ localstorage
-        2. Emergency Alert javascript
 
         Tomorrow:
         1. Finish json
@@ -64,8 +63,8 @@
             Links: ✓
             
         Missionary Page:
-            Lighthouse: X
-            Insights: X
+            Lighthouse: ✓
+            Insights: ✓
             500kb Weight: ✓
             HTML Validation: ✓
             CSS Validation: ✓
