--- a/temple/temples/index.html
+++ b/temple/temples/index.html
@@ -15,6 +15,7 @@
         <link rel="stylesheet" href="css/large.css">
         <script src="../js/base.js" defer></script>
         <script src="js/temples.js" defer></script>
+        <script src="js/likes.js" defer></script>
     </head>
     <body>
         <header>
