Fixed some styling

--- a/temple/index.html
+++ b/temple/index.html
@@ -34,10 +34,10 @@
         Temples Page:
             Lighthouse: 
             Insights: 
-            500kb Weight: ✓
+            500kb Weight: 
             HTML Validation: ✓
-            CSS Validation: ✓
-            Accessibility: ✓
+            CSS Validation: 
+            Accessibility: 
             Links: ✓
             
         Reservations Page:
