Fixed reservations margins for checkbox.

--- a/temple/reservations/index.html
+++ b/temple/reservations/index.html
@@ -71,9 +71,11 @@
                         <label>Number of People*<br><input type="number" name="people" required></label>
 
                         <h4>Special Rooms</h4>
-                        <label><input type="checkbox" name="changing" value="yes"> Changing Room</label><br>
-                        <label class="nomargin"><input type="checkbox" name="play" value="yes"> Playroom</label>
-                        <label class="nomargin"><input type="checkbox" name="wedding" value="yes"> Wedding Reception Hall</label>
+                        <ul>
+                            <li><label><input type="checkbox" name="changing" value="yes"> Changing Room</label></li>
+                            <li><label class="nomargin"><input type="checkbox" name="play" value="yes"> Playroom</label></li>
+                            <li><label class="nomargin"><input type="checkbox" name="wedding" value="yes"> Wedding Reception Hall</label></li>
+                        </ul>
                     </div>
                 </fieldset>
 
